fixed Dockerfile: RUN cp instead of COPY